# Investigating-AI-Based-Radar-Signal-Characterisation-from-Raw-I-Q-Dat

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: project_plan.md
docs/superpowers/plans/: 2026-06-03-codebase-cleanup.md
docs/superpowers/specs/: 2026-06-03-codebase-cleanup-design.md  2026-06-04-multitask-extension-design.md
notebooks/: 01_explore_data.ipynb  02_plot_signals.ipynb  03_traditional_detector.ipynb  03_train_multitask.ipynb  04_benchmark.ipynb  04_train_cnn.ipynb  05_compare.ipynb
results/: iq_stats.json  norm_stats.json  radar_cnn.pth  radar_mtl.pth  test_idx.npy  train_idx.npy
src/radar/: __init__.py  data.py  model.py  traditional.py
