[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "radar"
version = "0.1.0"
description = "Detecting and classifying radar signals from raw I/Q data: DSP baseline vs 1D CNN."
requires-python = ">=3.9"
dependencies = ["numpy", "scipy", "h5py", "torch", "matplotlib"]

[tool.setuptools.packages.find]
where = ["src"]
